--- a/Smart_Cane/Smart_Cane.csproj
+++ b/Smart_Cane/Smart_Cane.csproj
@@ -117,6 +117,11 @@
   <ItemGroup>
     <AndroidAsset Include="Assets\stops.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\values\Configs.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
      Other similar extension points exist, see Microsoft.Common.targets.
