--- a/Smart_Cane/Properties/AndroidManifest.xml
+++ b/Smart_Cane/Properties/AndroidManifest.xml
@@ -15,6 +15,5 @@
 	<uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 	<uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-
   android:largeHeap="true"
-</manifest>
+  <application /></manifest>
