Made some small changes to trains and range finder

--- a/Smart_Cane/Smart_Cane.csproj
+++ b/Smart_Cane/Smart_Cane.csproj
@@ -83,6 +83,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Global.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="MainApplication.cs" />
     <Compile Include="mylocation.cs" />
